# UnaReaderOLD

./: README.md
UnaReader/: CMakeLists.txt  main.cpp  main.qml
UnaReader/CustomWidgets/: Book.qml  BookGrid.qml
build-UnaReader-Android_Qt_6_4_3_Clang_arm64_v8a-Debug/: CMakeCache.txt  android-appUnaReader-deployment-settings.json  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-UnaReader-Android_Qt_6_4_3_Clang_arm64_v8a-Debug/.qt/: QtDeploySupport.cmake
build-UnaReader-Android_Qt_6_4_3_Clang_arm64_v8a-Debug/.qtc_clangd/: compile_commands.json
build-UnaReader-Android_Qt_6_4_3_Clang_arm64_v8a-Debug/.rcc/: appUnaReader_raw_qml_0.qrc  qmake_UnaReader.qrc
build-UnaReader-Android_Qt_6_4_3_Clang_arm64_v8a-Debug/UnaReader/: qmldir
build-UnaReader-Android_Qt_6_4_3_Clang_arm64_v8a-Debug/qmltypes/: appUnaReader_foreign_types.txt
build-UnaReader-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appunareader_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-UnaReader-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-UnaReader-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appUnaReader.cmake  Qt6_QmlPlugins_Imports_appUnaReader.rsp
build-UnaReader-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-UnaReader-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.rcc/: appUnaReader_raw_qml_0.qrc  qmake_UnaReader.qrc
build-UnaReader-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/UnaReader/: TestModule.qml  main.qml  qmldir
(+491 files in other folders)
